src/objects/Loop__LoopInfo__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Loop__DDP_Files_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DDP Files Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Drawloop_Subdomain__c</fullName>
        <label>Drawloop Subdomain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Trusted_Domains__c</fullName>
        <label>Trusted Domains</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Use_Connected_App_OAuth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Connected App &amp; OAuth</label>
        <type>Checkbox</type>
    </fields>
    <label>LOOP Info</label>
</CustomObject>